Add VariableResolverModel Handle dynawo 1.8.0 variables
Signed-off-by: lisrte <laurent.issertial_externe@rte-france.com>